--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ document.getElementById("doc_number").innerHTML = randomNumber;
  <nav>
  <div class="left_ad">
  <div class="adv">
-<a href="https://fyp-shop.pro/"><img src="img/left.png"/></a>
+<a href="https://fyp-shop.pro/"><img src="img/left.gif"/></a>
  </div>
  </div>
    <div class="btn">
@@ -147,7 +147,7 @@ document.getElementById("doc_number").innerHTML = randomNumber;
 </div> 
 <div class="right_ad">
  <div class="adv">
-<a href="https://fyp-shop.pro/"><img src="img/left.png"/></a>
+
  </div>
  </div>
 </nav>
