--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@ document.getElementById("doc_number").innerHTML = randomNumber;
 	
   </div>
  <nav>
- <div class="left_ad">
- <div class="adv">
+ <div class="left_base">
+ <div class="base">
 <a href="https://fyp-shop.pro/"><img src="img/left.gif"/></a>
  </div>
  </div>
+   
    <div class="btn">
    <div class="first"></div>
 <div class="wrap">
@@ -145,8 +146,11 @@ document.getElementById("doc_number").innerHTML = randomNumber;
 <a class="btnn1">Скачать GIF</a>
 </div> 
 </div> 
-<div class="right_ad">
- <div class="adv">
+
+
+
+<div class="right_base">
+ <div class="base">
 
  </div>
  </div>
