--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ document.getElementById("doc_number").innerHTML = randomNumber;
  <nav>
  <div class="left_base">
  <div class="base">
-<a href="https://fyp-shop.pro/"><img src="img/left.gif"/></a>
+<a href="https://guest.link/FYP"><img src="img/left.gif"/></a>
  </div>
  </div>
    
