--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ document.getElementById("doc_number").innerHTML = randomNumber;
 <button class="url_btn" id="b">Вставить фото</button>
 <br><br><br>
 <a class="btnn">Скачать JPG</a>
-<a class="btnn1">Скачать GIF</a>
+<a class="btnn1">Скачать PNG</a>
 </div> 
 </div> 
 
