--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ document.getElementById("doc_number").innerHTML = randomNumber;
    <div class="btn">
    <div class="first"></div>
 <div class="wrap">
+<a href="https://makedoc.fun/test_doc/" class="btnn1">Тестовая версия генератора</a>
  <p class="alert">Соблюдение формата - ОБЯЗАТЕЛЬНО!!!</p>
  <p>Укажите данные в одну строку</p>
  <textarea rows="3" name="main_row" class="main_row"  onfocus="this.select()" id="main_row"  type="text" placeholder="Укр/Ру в формате -  Фамилия Имя Дата рождения (через пробел)"></textarea> 
@@ -167,6 +168,8 @@ document.getElementById("doc_number").innerHTML = randomNumber;
 <br><br><br>
 <a class="btnn">Скачать JPG</a>
 <a class="btnn1">Скачать PNG</a>
+
+
 </div> 
 </div> 
 
