--- a/test_doc/index.html
+++ b/test_doc/index.html
@@ -43,8 +43,17 @@
 <span class="category_text" id="input4-preview">Ukraine</span><br>
 </div>
 
+
+</div>
+
+<nav>
+<div class="left_base">
+ <div class="base">
+<a href="https://megafarm.store/"><img src="megafarm.png"></a>
+ </div>
+ </div>
 <div id="inputs">
-<a href="https://megafarm.store/"><img src="megafarm.gif"></a>
+
 <div class="title">Не используйте фото с данного сервиса в реальной жизни!</div>
 <div class="surname_name">
   <label>Фамилия (Пусто = Дефолт)<br><br><input type="text" id="input1" ></label>
@@ -95,10 +104,12 @@
 <label>!!! Фото генерируется с наложением рандомного шума !!!</label>
 <div id="screenshotResult"></div>
 </div>
-</div>
-
-
-
+<div class="left_base">
+ <div class="base">
+<a href="https://guest.link/FYP"></a>
+ </div>
+ </div>
+</nav>
 
 
 
