--- a/test_doc/index.html
+++ b/test_doc/index.html
@@ -7,6 +7,15 @@
 <link rel="stylesheet" href="style.css">
 <script src="html2canvas.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FQ0HYN6WET"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FQ0HYN6WET');
+</script>
 </head>
 <body>
 <div class="main">
